<resources>
    <string name="app_name">FootBall</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="logo">Logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_and_dominate_the_leage_city">Find a team in your, and dominate the leage city</string>
    <string name="get_started">Get started</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="search_league">Looking a Co-ed begginer league near you</string>
</resources>
